fix: Better aligned anchors for Links on ComCon display + Switched hrefs to React Links

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -27,12 +27,12 @@ a:link, a:visited{
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 0% 5%;
+    margin: 5% 5%;
 }
 
 .project .prj-info {
     width: 100%;
-
+    margin: 3% 0%;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -113,9 +113,13 @@ nav a:active{
     transform: translate(-50%, -50%);
 }
 
-.youtube-background{
+.img-background{
     position: relative;
     max-width: 100% !important; 
+}
+
+.img-background img{
+    margin: 0;
 }
 
 /* HomePage */
@@ -274,13 +278,10 @@ footer i{
     padding: 3px;
 }
 
-.arrow:hover{
-    cursor: pointer;
-}
 
 .up {
-transform: rotate(-135deg);
--webkit-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
 }
 
 .github-badge{
@@ -323,6 +324,9 @@ transform: rotate(-135deg);
     bottom: 9em;
 }
 
+.close-arrow:hover{
+    cursor: pointer;
+}
 
 
 /* Cards */
@@ -352,4 +356,9 @@ transform: rotate(-135deg);
     height: 100%;
     width: 100%;
 }
+
+/* .add-border{
+    border: solid pink;
+    border-width: 2px;
+} */
 
